[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janus"
version = "1.0.0"
description = "Janus"
authors = [{name = "DeepSeek-AI"}]
license = {file = "LICENSE-CODE"}
urls = {homepage = "https://github.com/deepseek-ai/Janus"}
readme = "README.md"
requires-python = ">=3.8"
# dependencies = [
#     "torch>=2.0.1",
#     "transformers>=4.38.2",
#     "timm>=0.9.16",
#     "accelerate",
#     "sentencepiece",
#     "attrdict",
#     "einops",
# ]



[tool.setuptools]
packages = {find = {exclude = ["images"]}}
